<resources>
    <string name="app_name">ADWIO Player</string>
    <string name="playlist_name">Playlist name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">SIGN IN</string>
    <string name="enter_playlist_name">Enter playlist name</string>
    <string name="enter_credentials">Enter username and password</string>
    <string name="connection_failed">Unable to connect. Check account or connection.</string>
    <string name="connecting">Connecting…</string>
    <string name="search">SEARCH</string>
    <string name="settings">SETTINGS</string>
    <string name="favorites">FAVORITES</string>
    <string name="continue_watching">CONTINUE WATCHING</string>
    <string name="choose_entertainment">Choose what you want to watch</string>
    <string name="live_subtitle">Channels</string>
    <string name="movies_subtitle">Your movie library</string>
    <string name="series_subtitle">Seasons &amp; episodes</string>
    <string name="categories">CATEGORIES</string>
    <string name="loading_content">Loading content…</string>
    <string name="load_failed">Unable to load content • Retry later</string>
    <string name="search_hint">Search this section</string>
    <string name="no_episodes">No episodes returned by server</string>
    <string name="play">PLAY / RESUME</string>
    <string name="add_favorite">ADD FAVORITE</string>
    <string name="remove_favorite">REMOVE FAVORITE</string>
    <string name="season_number">Season %1$d</string>
    <string name="search_all">Search Live, Movies &amp; Series</string>
    <string name="search_all_hint">Type to search all content</string>
    <string name="results_count">%1$d results</string>
    <string name="epg_loading">Loading guide…</string>
    <string name="epg_unavailable">Guide unavailable</string>
    <string name="recent">Recent</string>
    <string name="home_discover_title">Discover</string>
    <string name="home_discover_subtitle">Choose a section and start instantly</string>
    <string name="live_title">LIVE TV</string>
    <string name="movies_title">MOVIES</string>
    <string name="series_title">SERIES</string>
    <string name="live_subtitle_clean">Live channels</string>
    <string name="movies_subtitle_clean">Movies library</string>
    <string name="series_subtitle_clean">Seasons &amp; episodes</string>
    <string name="about_app">App information</string>
    <string name="back">Back</string>
    <string name="settings_subtitle">Player, streaming, language and app preferences</string>
    <string name="settings_playback">Playback</string>
    <string name="settings_player">Player &amp; streaming</string>
    <string name="settings_general">General &amp; appearance</string>
    <string name="settings_storage">Storage &amp; data</string>
    <string name="setting_autoplay_last">Autoplay last channel</string>
    <string name="setting_remember_position">Remember watch position</string>
    <string name="setting_background">Background playback</string>
    <string name="setting_pip">Picture in Picture</string>
    <string name="setting_auto_next">Auto next episode</string>
    <string name="setting_auto_refresh">Auto refresh</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_history">Clear watch history</string>
    <string name="reset_settings">Reset settings</string>
    <string name="logout">Exit list</string>
    <string name="about_developer">About ADWIO • Developed by AboAdam</string>
    <string name="language">Language</string>
    <string name="language_system">System default</string>
    <string name="home_title">Home</string>
    <string name="buffer_small">Small</string>
    <string name="buffer_normal">Normal</string>
    <string name="buffer_large">Large</string>
    <string name="aspect_fit">Fit</string>
    <string name="aspect_fill">Fill</string>
    <string name="aspect_zoom">Zoom</string>
    <string name="stream_format_value">Stream format  •  %1$s</string>
    <string name="decoder_value">Decoder  •  %1$s</string>
    <string name="buffer_value">Buffer  •  %1$s</string>
    <string name="aspect_value">Screen size  •  %1$s</string>
    <string name="language_value">Language  •  %1$s</string>
    <string name="grid_value">Grid  •  %1$s</string>
    <string name="startup_value">Startup  •  %1$s</string>
    <string name="stream_format">Stream format</string>
    <string name="decoder">Decoder</string>
    <string name="buffer_mode">Buffer mode</string>
    <string name="aspect_ratio">Screen size</string>
    <string name="grid_density">Grid density</string>
    <string name="startup_screen">Startup screen</string>
    <string name="cache_cleared">Cache cleared</string>
    <string name="history_cleared">Watch history cleared</string>
    <string name="recently_added">Recently added</string>
    <string name="recently_added_30">Recently added • 30</string>
    <string name="favorites_count">%1$d favorites</string>
    <string name="recent_channels_count">%1$d recent channels</string>
    <string name="watch_trailer">WATCH TRAILER</string>
    <string name="trailer">Trailer</string>
    <string name="loading_info">Loading information…</string>
    <string name="no_extra_info">No additional information</string>
    <string name="director">Director</string>
    <string name="cast">Cast</string>
    <string name="rewind_15">Back 15 seconds</string>
    <string name="forward_15">Forward 15 seconds</string>

    <string name="all">ALL</string>
    <string name="all_movies">ALL MOVIES</string>
    <string name="all_series">ALL SERIES</string>
    <string name="updating_content">Updating content…</string>
    <string name="showing_saved_content">Showing saved content • update unavailable</string>
    <string name="load_failed_keep_cache">Unable to load content • try again later</string>
    <string name="general_settings">General Settings</string>
    <string name="time_format">Time Format</string>
    <string name="parental_control">Parental Control</string>
    <string name="player_settings">Player Settings</string>
    <string name="speed_test">Speed Test</string>
    <string name="storage_cache">Storage &amp; Cache</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="about">About</string>
    <string name="playback_general_options">Playback &amp; General Options</string>
    <string name="auto">Auto</string>
    <string name="system_default">System</string>
    <string name="hour_12">12-hour</string>
    <string name="hour_24">24-hour</string>
    <string name="save">Save</string>
    <string name="reset">Reset</string>
    <string name="reset_settings_message">Restore ADWIO settings to defaults.</string>
    <string name="settings_reset_done">Settings reset</string>
    <string name="hardware_preferred">Hardware preferred</string>
    <string name="software_fallback">Software fallback</string>
    <string name="controls_timeout">Controls timeout</string>
    <string name="controls_timeout_value">Controls timeout  •  %1$ds</string>
    <string name="pin_hint">4-digit PIN</string>
    <string name="set_parental_pin">Set Parental PIN</string>
    <string name="change_parental_pin">Change Parental PIN</string>
    <string name="parental_pin_saved">Parental PIN saved</string>
    <string name="pin_four_digits">PIN must be 4 digits</string>
    <string name="disable">Disable</string>
    <string name="parental_disabled">Parental control disabled</string>
    <string name="checking_connection">Checking connection…</string>
    <string name="connection_response">Connection response: %1$d ms</string>
    <string name="connection_test_failed">Connection test failed</string>
    <string name="no_email_app">No email app found</string>
    <string name="support_email_body">Please describe the problem here:\n\n\n------------------------------\nSafe diagnostic information\nDiagnostic ID: %1$s\nApp version: %2$s (%3$d)\nAndroid: %4$s / SDK %5$d\nDevice: %6$s %7$s\nLocale: %8$s\n------------------------------\nSecurity: no username, password, host or playlist URL is included.</string>

</resources>